--- a/manager/swarm.conf
+++ b/manager/swarm.conf
@@ -6,7 +6,7 @@ mine_functions:
     - 'docker swarm join-token manager -q'
   manager_ip:
     - mine_function: network.ip_addrs
-    - {{ salt['pillar.get]('docker:swarm:interface', 'eth0') }}
+    - {{ salt.pillar.get('docker:swarm:interface', 'eth0') }}
   worker_token:
     - mine_function: cmd.run
     - 'docker swarm join-token worker -q'
