--- a/pillar.example
+++ b/pillar.example
@@ -14,3 +14,8 @@ docker:
   swarm:
     # Configure interface for Docker Swarm communication (defaults to eth0)
     interface: eth0
+
+  prune:
+    all: true # true (Default): Remove all unused images, translates to `docker system prune --force --all`
+              # false: (Remove only dangling images, translates to `docker system prune --force`
+    volumes: false # Remove unused volumes as well. Default: false
